# sift-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_client_library.py  test_sift_verification_apis.py
.circleci/: config.yml
.github/workflows/: ci.yml  publishing2PyPI.yml
.jenkins/: Jenkinsfile
examples/reserved_events/: test_event.py
examples/verification_api/: test_verification_api.py
sift/: __init__.py  client.py  constants.py  exceptions.py  utils.py  version.py
test_integration_app/: globals.py  main.py
test_integration_app/decisions_api/: __init__.py  test_decisions_api.py
test_integration_app/events_api/: __init__.py  test_events_api.py
test_integration_app/labels_api/: __init__.py  test_labels_api.py
test_integration_app/psp_merchant_api/: __init__.py  test_psp_merchant_api.py
test_integration_app/score_api/: __init__.py  test_score_api.py
test_integration_app/verifications_api/: __init__.py  test_verification_api.py
test_integration_app/workflows_api/: __init__.py  test_workflows_api.py
tests/: client_test.py  test_client.py  test_client_v203.py  test_verification_apis.py
